# trade-engine

./: .cursorignore  .gitignore  README.md  account_asset_leverages.json  credentials.py  execute_trades.py  pyproject.toml
account_processors/: blofin_processor.py  bybit_processor.py  ccxt_processor.py  hyperliquid_processor.py  kucoin_processor.py  mexc_processor.py
config/: asset_mapping.py  credentials.py  signal_weights.py
core/: bittensor_signals.py  bybit_accounts.py  credentials.py  signal_manager.py  signal_weight_config.py  tradingview_signals.py  unified_balance.py  unified_position.py  unified_ticker.py
dataclasses/: bittensor_signals.py  tradingview_signals.py
docs/: ccxt_integration_summary.md  ccxt_processor_guide.md  multi_ccxt_usage.md  order_calculation_examples.md
llm_history/: trade-engine-part-01.txt
manual_tests/: bybit_sizing_validator.py  test_bybit_ccxt_comparison.py  test_bybit_native_live.py  test_ccxt_processor.py  test_leverage_changes.py  test_margin_calculation_debug.py  test_position_flip_fix.py  test_reconcile_position_ccxt.py
signal_endpoints/: README.md  tradingview_endpoint.py
signal_processors/: README.md  bittensor_processor.py  credentials.py  signal_manager.py  tradingview_processor.py
tests/: check_bybit_setup.py  ping_mexc.py  test_blofin_comprehensive.py  test_blofin_symbol_mapping.py  test_bybit_ccxt_comparison.py  test_bybit_ccxt_live.py  test_bybit_comprehensive.py  test_bybit_native_live.py  test_bybit_sizing.py  test_ccxt_processor.py  test_disabled_account_guard.py  test_disabled_account_handling.py  (+11 more)
(+7 files in other folders)
