[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-engine"
version = "0.1.0"
description = "A trade engine for managing signals from Bittensor and TradingView"
authors = [{ name = "sirouk" }]
maintainers = [{ name = "sirouk" }]
readme = "README.md"
requires-python = ">=3.10"


classifiers = [

    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "aiohttp",
    "ujson",
    "pybit",
    "blofin",
    "kucoin-futures-python @ git+https://github.com/sirouk/kucoin-futures-python-sdk",
    "pymexc @ git+https://github.com/sirouk/pymexc",
]


[project.scripts]
sample = "sample:main"


[tool.setuptools]
packages = ["core", "signal_processors"]
